kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinema-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cinema-app
  template:
    metadata:
      labels:
        app: cinema-app
    spec:
      containers:
      - name: cinema-app
        image: cinema-microservicee:latest
        ports:
        - containerPort: 3000
