kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinema-servicee
spec:
  selector:
    app: cinema-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
